content/boundary/v1.0.x/content/docs/workers/filters.mdx
---
layout: docs
page_title: Configure a worker filter
description: >-
  Configure a Boundary worker filter to control which workers proxy a session, act as a Vault credential store, or store session recordings. View filter examples.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-10T22:18:16.000Z
# END AUTO GENERATED METADATA
---

# Configure a worker filter

A Boundary worker filter is a boolean expression that selects which workers can handle a resource.
You set filters on targets to control session ingress and egress, on Vault credential stores to reach private Vault clusters, and on storage buckets to choose which workers record sessions.
Following are some examples of using these values in filters that can be applied to targets, Vault credential stores, or storage buckets:

@include '/workers/filter-examples.mdx'

Refer to [Filtering and listing resources](/boundary/docs/filtering) for more information about Boundary's filter syntax and best practices.

Before you configure a filter, add tags to your workers.
Refer to [Route traffic through a worker](/boundary/docs/workers/worker-tags) to learn how to tag a worker.

@include '/workers/filter-key-warning.mdx'

## Generate a filter in the Admin UI

The Admin UI includes a filter generator that formats a filter from a worker tag or a worker name.
Use the generator when you want Boundary to construct the filter syntax for you.

The generator appears in the following places in the Admin UI:

- On a target, when you select the **Workers** tab and click **Add Worker Filter** or **Edit Worker Filter**.
- On a Vault credential store, when you select **Vault** as the credential store type.
- On a storage bucket, in the **Worker Filter** field.

Dynamic host catalogs also accept a worker filter, but they do not include the generator.
You must write those filters yourself.

Complete the following steps to generate a filter:

1. If the generator is not visible, select **Show filter generator**.

1. Select whether you want to format a worker **Tag** or a worker **Name**.

1. Enter the input values for the option you selected:
   - For **Tag**, enter the tag **Key** and the tag **Value**.
   - For **Name**, select an **Operator**, and then enter the worker name as the **Value**.

1. Click **Copy** to copy the **Generated result**.

1. Paste the generated filter into the filter editor, and then click **Save**.

The generator formats the following filters:

| Option | Input values | Generated filter |
| ------ | ------------ | ---------------- |
| Tag | Key `type`, value `egress` | `"egress" in "/tags/type"` |
| Tag | Key `region`, value `us-east-1` | `"us-east-1" in "/tags/region"` |
| Name | Operator `==`, value `egress-worker-1` | `"/name" == "egress-worker-1"` |
| Name | Operator `matches (regex)`, value `egress-worker-1` | `"/name" matches "egress-worker-1"` |
| Name | Operator `contains`, value `egress-worker-1` | `"/name" contains "egress-worker-1"` |

<Note>

  The generator does not apply the filter for you.
  You must copy the generated result into the filter editor before you save the filter.

</Note>

The generator formats one tag or one name at a time.
To combine conditions, generate each expression separately, and then join them in the editor using the `and` and `or` operators.
Refer to [Filtering and listing resources](/boundary/docs/filtering) for the full filter syntax.

## Example worker filter for targets

Once workers have tags, you can use these tags to control which
workers are allowed to manage a given session by specifying worker filter attributes
when you configure [targets](/boundary/docs/domain-model/targets).

The `egress_worker_filter` attribute controls which workers are used for egress to a target. This is the worker
that accesses the target.

The `ingress_worker_filter` attribute controls which workers are used for ingress to a target.
This is the worker a client connects to when initiating a connection to a target.

<Tabs>
<Tab heading="UI" group="ui">

Example of a filter configured on a target in the Admin UI:

![Example of a target ingress worker filter](/img/ui/target-ingress-worker-filter_light.png#light-theme-only)
![Example of a target ingress worker filter](/img/ui/target-ingress-worker-filter_dark.png#dark-theme-only)

</Tab>
<Tab heading="CLI" group="cli">

Example of a filter configured on a target with the CLI:

```shell-session
$ boundary targets update tcp -id tssh_1234567890 -egress-worker-filter='"prod" in "/tags/type"'
```

</Tab>
<Tab heading="Terraform" group="terraform">

Example of a filter configured on a target with Terraform:

```hcl
resource "boundary_target" "aws-webservers-prod" {
  type                 = "ssh"
  name                 = "aws-web-prod"
  description          = "AWS EC2 Targets"
  scope_id             = boundary_scope.project.id
  default_port         = 22
  egress_worker_filter = "\"prod\" in \"/tags/type\""
}
```

</Tab>
</Tabs>

## Example worker filter for Vault credential store

Tags are used to control which workers can manage Vault requests by specifying
a `worker_filter`attribute when configuring [credential stores](/boundary/docs/domain-model/credential-stores#vault-credential-store-attributes).

This allows the use of private Vault instances with Boundary. Workers
deployed in the same network as a private Vault instance can access and relay
Vault requests to Boundary controllers.

<Tip>

  A worker that matches the worker filter must exist before you define the Vault credential store, as it will perform the Vault calls needed to set up the credential store with Boundary.

</Tip>

<Tabs>
<Tab heading="UI" group="ui">

Example of a worker filter configured on a Vault credential store in the Admin UI:

![Example of a credential store worker filter](/img/ui/vault-worker-filter_light.png#light-theme-only)
![Example of a credential store worker filter](/img/ui/vault-worker-filter_dark.png#dark-theme-only)

</Tab>
<Tab heading="CLI" group="cli">

Example of a worker filter configured on a Vault credential store with the CLI:

```shell-session
$ boundary credential-stores update vault -id csvlt_1234567890 -worker-filter='"vault" in "/tags/type"'
```

</Tab>
<Tab heading="Terraform" group="terraform">

Example of a worker filter configured on a Vault credential store with Terraform:

```hcl
resource "boundary_credential_store_vault" "vault_cred_store" {
  name          = "Vault host credentials"
  address       = "http://127.0.0.1:8200"       # change to Vault address
  token         = "s.0ufRo6XEGU2jOqnIr7OlFYP5"  # change to valid Vault token
  scope_id      = boundary_scope.project.id     # change to target scope
  worker_filter = "\"vault\" in \"/tags/type\"" # change to access private Vault cluster
}
```

</Tab>
</Tabs>

## Example worker filter for storage buckets

Session recording functions are performed by Boundary workers. Workers also store recordings on Boundary storage buckets. When you create Boundary storage buckets, you can use tags to select the workers you prefer to use for session recording responsibilities.

<Tabs>
<Tab heading="UI" group="ui">

Example of a worker filter configured on a storage bucket in the Admin UI:

![Example of a storage bucket worker filter](/img/ui/session-rec-worker-filter_light.png#light-theme-only)
![Example of a storage bucket worker filter](/img/ui/session-rec-worker-filter_dark.png#dark-theme-only)

</Tab>
<Tab heading="CLI" group="cli">

Example of a worker filter configured on a storage bucket with the CLI:

```shell-session
$ boundary storage-buckets update -id sb_1234567890 -worker-filter='"session-recording" in "/tags/type"'
```

</Tab>
<Tab heading="Terraform" group="terraform">

Example of a worker filter configured on a storage bucket with Terraform:

```hcl
resource "boundary_storage_bucket" "aws_dynamic_credentials_example" {
  name        = "session-recording-storage-bucket"
  scope_id    = boundary_scope.org.id # change to valid scope ID
  plugin_name = "aws"
  bucket_name = "mybucket"            # change to valid AWS S3 storage bucket name

  # the role_arn value should match the arn used as the instance profile attached to the ec2 instance
  # https://docs.aws.amazon.com/IAM/latest/UserGuide/id_roles_use_switch-role-ec2_instance-profiles.html
  attributes_json = jsonencode({
    "region"                      = "us-east-1"
    "role_arn"                    = "arn:aws:iam::123456789012:role/S3Access" # change to valid role ARN
    "disable_credential_rotation" = "true"
  })
  worker_filter = "\"session-recording\" in \"/tags/type\"" # change to valid worker filter tag
}
```

</Tab>
</Tabs>

## Next steps

After you configure a worker filter, you can [configure multi-hop sessions](/boundary/docs/workers/multi-hop) to chain workers across networks.
Multi-hop deployments use ingress and egress filters to route a session through the chain.

You can also [verify SSH host identity](/boundary/docs/workers/ssh-host-key) on the worker that connects to targets.

If a session fails because no workers match the filter, refer to [Troubleshoot workers](/boundary/docs/workers/troubleshoot#sessions-to-a-target-fail-with-no-available-workers).
